Infra/10-MinIO/minio-oprater-console-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: cluster-issuer-cloudflare-letsencrypt-prod
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
    external-dns.alpha.kubernetes.io/hostname: minio-oprater-console.cloudnative.love
    external-dns.alpha.kubernetes.io/ttl: "120"
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
  name: minio-oprater-console
  namespace: minio-operator
spec:
  ingressClassName: nginx
  rules:
    - host: minio-oprater-console.cloudnative.love
      http:
        paths:
          - backend:
              service:
                name: console
                port:
                  number: 9090
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - minio-oprater-console.cloudnative.love
      secretName: minio-oprater-console-server-tls
